# UdpServerDemo

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cxx
Include/: static_dispatcher.hpp  text_recorder.hpp  udp_server.hpp
Server/: CMakeLists.txt  Server.cxx
Test/: CMakeLists.txt  dispatcher_test.cxx
